# cemrgapp

./: README.md  installatioin-instructions-v1-04-2020.txt  installation-instructions-v1-04-2020.txt  plugingeneratorcodes.txt
Applications/MainApp/: CMakeLists.txt  target_libraries.cmake
CMakeExternals/: VMTK.cmake
Modules/CemrgAppModule/cmdapps/: CMakeLists.txt
Modules/CemrgAppModule/include/: CemrgCommandLine.h  CemrgScar3D.h  CemrgStrains.h
Modules/CemrgAppModule/src/: CemrgAtriaClipper.cpp  CemrgCommandLine.cpp  CemrgScar3D.cpp  CemrgStrains.cpp
Plugins/kcl.cemrgapp.easi/src/internal/: EASIView.cpp
Plugins/kcl.cemrgapp.festive/: files.cmake
Plugins/kcl.cemrgapp.festive/src/internal/: FestiveView.cpp  FestiveView.h  FestiveViewControls.ui  FestiveViewControls_new.ui  FestiveViewUIAtlas.ui  FestiveViewUIAtlasBody.ui  FestiveViewUILabelPropagation.ui  FestiveViewUILogin.ui  FestiveViewUIPatientInfo.ui  FestiveViewUIReconst.ui  FestiveViewUIReconstDSVR.ui  FestiveViewUIReconstMulti.ui  FestiveViewUIReconstSVR.ui  FestiveViewUIRegister.ui  FestiveViewUIReorient.ui  FestiveViewUIReorientReference.ui  FestiveViewUIServerInfo.ui
Plugins/kcl.cemrgapp.mmcwplugin/src/internal/: MmcwView.cpp  MmcwView.h  MmcwViewControls.ui  MmcwViewPlot.cpp  MmcwViewPlotControls.ui
Plugins/kcl.cemrgapp.scar/: files.cmake  plugin.xml
Plugins/kcl.cemrgapp.scar/src/internal/: AtrialScarView.cpp  AtrialScarView.h  AtrialScarViewControls.ui  ScarCalculationsView.cpp  ScarCalculationsView.h  ScarCalculationsViewControls.ui  YZSegView.cpp  kcl_cemrgapp_scar_Activator.cpp
(+1 files in other folders)
